# Yiyin-Panel

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  data_access.py  main.py  schemas.py  tokens.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: api.ts  style.css
frontend/src/lib/: auth.ts
frontend/src/router/: index.ts
frontend/src/views/: AdminDashboardView.vue  AdminLoginView.vue  GroupSiteView.vue  LinkExpiredView.vue
nginx/: yiyin.conf.example
scripts/: deploy-frontend-dist.sh  setup-nginx.sh
