[project]
name = "Yiyin-Panel-backend"
version = "0.1.0"
description = "FastAPI backend for Yiyin-Panel"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "PyJWT>=2.9.0,<3.0.0",
    "Pillow>=11.0.0,<12.0.0",
]

[tool.uv]
package = false
